feat: add tokenizer and paddings

--- a/data.ipynb
+++ b/data.ipynb
@@ -2849,6 +2849,126 @@
         "accuracy = accuracy_score(y_test_encoded_pred, y_pred_test)\n",
         "print(f\"Test Set Accuracy: {accuracy:.4f}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "0821fa97",
+      "metadata": {},
+      "source": [
+        "### Deep Learning Models"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "2f2e2b56",
+      "metadata": {},
+      "source": [
+        "#### Convert Labels to Categorical"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1f07bb83",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from tensorflow.keras.utils import to_categorical"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "837b3344",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_train_categorical = to_categorical(y_train_encoded)\n",
+        "y_test_categorical = to_categorical(y_test_encoded)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "509f8907",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(11014, 3)"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "y_train_categorical.shape"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "d536bef3",
+      "metadata": {},
+      "source": [
+        "#### Tokenization"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ec5296e2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+        "from tensorflow.keras.preprocessing.sequence import pad_sequences"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8faead72",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tokenizer = Tokenizer(num_words=10000)\n",
+        "tokenizer.fit_on_texts(X_train)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "49483171",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tokenized_train = tokenizer.texts_to_sequences(X_train)\n",
+        "X_train_padded = pad_sequences(tokenized_train, maxlen=100)\n",
+        "\n",
+        "tokenized_test = tokenizer.texts_to_sequences(X_test)\n",
+        "X_test_padded = pad_sequences(tokenized_test, maxlen=100)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d030b7b9",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Vocabulary size: 26196\n"
+          ]
+        }
+      ],
+      "source": [
+        "vocabulary_size = len(tokenizer.word_index) + 1\n",
+        "print(f\"Vocabulary size: {vocabulary_size}\")"
+      ]
     }
   ],
   "metadata": {
