feat: load GloVe embeddings

--- a/data.ipynb
+++ b/data.ipynb
@@ -2969,6 +2969,74 @@
         "vocabulary_size = len(tokenizer.word_index) + 1\n",
         "print(f\"Vocabulary size: {vocabulary_size}\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "588f014f",
+      "metadata": {},
+      "source": [
+        "#### Load GloVe Embeddings"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3e2e106e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!wget http://nlp.stanford.edu/data/glove.6B.zip\n",
+        "!unzip glove.6B.zip"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1d8b9d14",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!wget http://nlp.stanford.edu/data/glove.twitter.27B.zip\n",
+        "!unzip glove.twitter.27B.zip"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "5c78f252",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def load_glove_embeddings(file_path):\n",
+        "    embeddings_index = {}\n",
+        "\n",
+        "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
+        "        for line in f:\n",
+        "            values = line.split()\n",
+        "            word = values[0]\n",
+        "            vector = np.asarray(values[1:], dtype=\"float32\")\n",
+        "            embeddings_index[word] = vector\n",
+        "            \n",
+        "    return embeddings_index"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "42f98412",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def create_embedding_matrix(tokenizer, embeddings_index, embedding_dim=100):\n",
+        "    vocab_size = len(tokenizer.word_index) + 1\n",
+        "    embedding_matrix = np.zeros((vocab_size, embedding_dim))\n",
+        "\n",
+        "    for word, i in tokenizer.word_index.items():\n",
+        "        embedding_vector = embeddings_index.get(word)\n",
+        "        if embedding_vector is not None:\n",
+        "            embedding_matrix[i] = embedding_vector\n",
+        "    return embedding_matrix"
+      ]
     }
   ],
   "metadata": {
