feat: add LSTM model training scripts

--- a/data.ipynb
+++ b/data.ipynb
@@ -3037,6 +3037,105 @@
         "            embedding_matrix[i] = embedding_vector\n",
         "    return embedding_matrix"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b3fe08ad",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Embedding, LSTM, Dense, Dropout, Bidirectional\n",
+        "from tensorflow.keras.optimizers import Adam\n",
+        "from tensorflow.keras.callbacks import EarlyStopping"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "bc196910",
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "ffcb72b9",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def build_model(embedding_matrix, max_len, num_classes):\n",
+        "    model = Sequential()\n",
+        "    model.add(Embedding(input_dim=embedding_matrix.shape[0],\n",
+        "                        output_dim=embedding_matrix.shape[1],\n",
+        "                        weights=[embedding_matrix],\n",
+        "                        input_length=max_len,\n",
+        "                        trainable=True))\n",
+        "    model.add(Bidirectional(LSTM(64, return_sequences=False)))\n",
+        "    model.add(Dropout(0.5))\n",
+        "    model.add(Dense(num_classes, activation=\"softmax\"))\n",
+        "\n",
+        "    model.compile(loss=\"categorical_crossentropy\",\n",
+        "                  optimizer=\"adam\",\n",
+        "                  metrics=[\"accuracy\"])\n",
+        "    return model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3729d0a2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "embedding_dim = 100\n",
+        "\n",
+        "embedding_matrix_general = create_embedding_matrix(tokenizer, load_glove_embeddings(\"glove.6B.100d.txt\"), embedding_dim)\n",
+        "embedding_matrix_twitter = create_embedding_matrix(tokenizer, load_glove_embeddings(\"glove.twitter.27B.100d.txt\"), embedding_dim)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "715b5487",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model_general = build_model(embedding_matrix_general, max_len=100, num_classes=3)\n",
+        "model_twitter = build_model(embedding_matrix_twitter, max_len=100, num_classes=3)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "0e623153",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "early_stopping = EarlyStopping(monitor=\"accuracy\", patience=3, restore_best_weights=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8e747ca7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model_general.fit(X_train_padded, y_train_categorical, epochs=20, batch_size=512, validation_split=0.2, class_weight=class_weights_dict, callbacks=[early_stopping])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3c192dc1",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model_twitter.fit(X_train_padded, y_train_categorical, epochs=20, batch_size=512, validation_split=0.2, class_weight=class_weights_dict, callbacks=[early_stopping])"
+      ]
     }
   ],
   "metadata": {
