feat: augment severe class samples

--- a/main.ipynb
+++ b/main.ipynb
@@ -2852,6 +2852,144 @@
     },
     {
       "cell_type": "markdown",
+      "id": "5a36f98d",
+      "metadata": {},
+      "source": [
+        "### Data Augumentation for Deep Learning"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "bff19b6e",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip install nlpaug"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "be1e9015",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import nlpaug.augmenter.word as naw\n",
+        "import nltk\n",
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "cf98aece",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "nltk.download(\"averaged_perceptron_tagger\")\n",
+        "nltk.download(\"averaged_perceptron_tagger_eng\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1084697b",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "augmenter = naw.SynonymAug(aug_src=\"wordnet\", lang=\"eng\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "e4d43bdf",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "target_class = \"severe\"\n",
+        "target_class_index = list(encoder.classes_).index(target_class)\n",
+        "target_class_index"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "375ccaae",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train_list = X_train.tolist()\n",
+        "y_train_list = y_train_encoded.tolist()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d0917ebc",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "augmented_texts = []\n",
+        "augmented_labels = []\n",
+        "\n",
+        "for text, label in zip(X_train_list, y_train_list):\n",
+        "    if label == target_class_index:\n",
+        "        try:\n",
+        "            for _ in range(4):\n",
+        "                aug_text = augmenter.augment(text)\n",
+        "                augmented_texts.append(aug_text)\n",
+        "                augmented_labels.append(label)\n",
+        "        except Exception as e:\n",
+        "            print(f\"Skipping a sample due to error: {e}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "fb746286",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X_train_augmented = X_train_list + augmented_texts\n",
+        "y_train_augmented = y_train_list + augmented_labels"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "758be198",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Original training size: 11014\n",
+            "Augmented severe class samples: 3896\n",
+            "Total training size after augmentation: 14910\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(f\"Original training size: {len(X_train_list)}\")\n",
+        "print(f\"Augmented severe class samples: {len(augmented_texts)}\")\n",
+        "print(f\"Total training size after augmentation: {len(X_train_augmented)}\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "0821fa97",
       "metadata": {},
       "source": [
