feat: save augmented data

--- a/main.ipynb
+++ b/main.ipynb
@@ -2989,6 +2989,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "c2508662",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_augmented = pandas.DataFrame({\n",
+        "    \"text\": X_train_augmented,\n",
+        "    \"label\": y_train_augmented\n",
+        "})"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "88358881",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_augmented.to_csv(\"augmented_data_DL.csv\", index=False)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "0821fa97",
       "metadata": {},
